syntax = "proto3";

option csharp_namespace = "MicroIdentity.Protos";

import "google/protobuf/empty.proto";
import "Protos/Identity/accounts.proto";

service Manage {
  rpc Info (google.protobuf.Empty) returns (AppUser);
  rpc GetTenants (google.protobuf.Empty) returns (TenantsResponse);
  rpc Update (AppUser) returns (AppUser);
  rpc ChangePassword (ChangePasswordRequest) returns (StatusResponse);
}

message Tenant
{
	int32 id = 1;
	string name = 2;
}

message TenantsResponse
{
	repeated Tenant tenants = 1;
}

message ChangePasswordRequest
{
	string currentPassword = 1;

	string newPassword = 2;
}